<resources>
    <string name="app_name">Muslim Companion </string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="prayer_timing">Prayer Timing</string>
    <string name="prayer_timing_detail">Discover prayer timings.</string>
    <string name="holy_quran">Holy Quran</string>
    <string name="detail_text">Explore the Holy Quran.</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="remember_me">  Remember me</string>
    <string name="log_in_with">or log in with</string>
    <string name="sign_up_with">or sign up with</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an Account?</string>
    <string name="already_have_an_account">Already have an Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="my_location">My Location</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile">Profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="prayer_notifications">Prayer Notifications</string>
    <string name="bio_metric">Biometric</string>
    <string name="security">Security</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="deleting_account">Why are you deleting your account?</string>
    <string name="continue_btn">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="account_to_delete">Deleting your account will do the following:</string>
    <string name="deleting_your_account_logout_devices">\u2022 Log you out on all devices</string>
    <string name="deleting_your_account_info">\u2022 Delete all of your account information</string>
    <string name="delete">Delete</string>
    <string name="account_deleted">Your account is deleted!</string>
    <string name="thank_you_for_using_our_application">Thank you for using our Application</string>
    <string name="quit_app">Quit App</string>
    <string name="version">Version 1.22.3</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="update_available">Update Available</string>
    <string name="twitter">Twitter</string>
    <string name="title_verify_biometric">Verify your identity</string>
    <string name="message_confirm_biometric">Confirm your identity so we can verify it\'s you</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="tuesday_17_august_28_muharram_1445">Tuesday, 17 August</string>
    <string name="next_prayer_in">Next Prayer in</string>
    <string name="_00_25_20">00 hr 00 min 00 sec</string>
    <string name="muharram_1445">Muharram_1445</string>
    <string name="asar">Asar</string>
    <string name="_05_30_pm">05:30 PM</string>
    <string name="surah_ikhlaas_ayah_01">Surah-Ikhlaas - Ayah 01</string>
    <string name="ayat_of_the_day">Ayat of the Day</string>
    <string name="ayat_name">قُلْ هُوَ ٱللَّهُ أَحَدٌ</string>
    <string name="say_o_prophet_he_is_allah_one_and_indivisible_1">Say, ˹O Prophet,˺ “He is Allah—One ˹and Indivisible˺ (1)</string>
    <string name="qibla">Qibla</string>
    <string name="note">Note</string>
    <string name="allow_location_text">Allow location for this application to show results more accurate such as Prayer timings, mosque location and Qaba direction.</string>
    <string name="allow_location">Allow Location</string>
    <string name="only_when_using_this_app">Only when using this app</string>
    <string name="deny_location_access">Deny Location Access</string>
    <string name="advertisement_here">Advertisement here</string>
    <string name="prayer_timings">Prayer Timings</string>
    <string name="isha">Isha</string>
    <string name="_09_15_pm">09:15 PM</string>
    <string name="maghrib">Maghrib</string>
    <string name="_07_20_pm">07:20 PM</string>
    <string name="_265">265°</string>
    <string name="qibla_dir">Qibla:</string>
    <string name="location">Location:</string>
    <string name="_1628_km">1628 km</string>
    <string name="distance">Distance:</string>
    <string name="islamabad">Islamabad</string>
    <string name="direction">Direction</string>
    <string name="islamabad_pakistan">Islamabad, Pakistan</string>
    <string name="_18_32_30">18:32:30</string>
    <string name="asr">Asr</string>
    <string name="_03_30_am">03:30 AM</string>
    <string name="fajr">Fajr</string>
    <string name="zuhar">Zuhar</string>
    <string name="tahajjud">Tahajjud</string>
    <string name="today">Today</string>
    <string name="_11_august_2023">11 August, 2023</string>
    <string name="day_date_string">Thursday 21,2023</string>
    <string name="spacer">-</string>
    <string name="counter">120/100</string>
    <string name="history">History:</string>
    <string name="tasbih_counter">Tasbih Counter</string>
    <string name="digital_tasbih">Digital Tasbih</string>
    <string name="set_counter">Set Counter</string>
    <string name="show_history">Show History</string>
    <string name="_100">100</string>
    <string name="_33">33</string>
    <string name="overflow">Overflow</string>
    <string name="start">Start</string>
    <string name="subhanallah">SubhanAllah</string>
    <string name="have_you_dikhr_today">Have you dikhr today?</string>
    <string name="_04_08_2023">04/08/2023</string>
    <string name="tasbih">Tasbih</string>
    <string name="distance_text">Distance:</string>
    <string name="_1628_km_">1628 km</string>
    <string name="_265_">265°</string>
    <string name="angle">Angle:</string>
    <string name="pakistan">Pakistan</string>
    <string name="islamabad_city">Islamabad</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title" translatable="false">GPS settings</string>
    <string name="gps_settings_text" translatable="false">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok" translatable="false">Settings</string>
    <string name="settings_button_cancel" translatable="false">Cancel</string>
    <string name="msg_permission_not_granted_yet" translatable="false">Location access not available yet</string>
    <string name="msg_permission_granted" translatable="false">Location Access Granted</string>
    <string name="toast_permission_required" translatable="false">This app requires Access Location</string>
    <string name="your_location" translatable="false">Your Location: </string>
    <string name="unable_to_get_your_location" translatable="false">Unable to get your location</string>
    <string name="location_not_ready" translatable="false">Location not ready.</string>
    <string name="pls_enable_location" translatable="false">Please turn on Location</string>
    <string name="degree" translatable="false">°</string>
    <string name="using_last_location" translatable="false">using last location.</string>
    <string name="dialog_message_sensor_not_exist" translatable="false">Your device doesn\'t have the required sensors</string>
    <string name="dialog_title" translatable="false">Alert</string>
    <string name="footer_image">Footer Image</string>
    <string name="zakat_calculator">Zakat Calculator</string>
    <string name="gold">Gold</string>
    <string name="Silver">Silver</string>
    <string name="Stones">Stones</string>
    <string name="agriculture">Agriculture</string>
    <string name="property">Property</string>
    <string name="business">Business</string>
    <string name="partnership">Partnership</string>
    <string name="loan">Loan</string>
    <string name="_10_tola">10 Tola</string>
    <string name="calculate">Calculate</string>
    <string name="rs">Rs</string>
    <string name="further_guidance">For further guidance see: (1) Zakat form by Jamia Darul Uloom Karachi. (2) Zakat Farm by Jamia Ashrafia Lahore</string>
    <string name="amount_zakat">Amount of Zakat: Rs.</string>
    <string name="amount_zakat_is_due">The amount on which Zakat is due: Rs.</string>
    <string name="amount_deducted">Amount to be deducted: Rs.</string>
    <string name="wealth_zakat_value">Total wealth Zakat value: Rs.</string>
    <string name="answer">Answer</string>
    <string name="zakat_is_obligatory">To find out whether Zakat is obligatory on you or not, find out the current price of one tola of silver from a goldsmith and enter it.</string>
    <string name="price_tola_of_silver">Price of a tola of silver:</string>
    <string name="zakat_previous_years">(7) The amount of Zakat of previous years which you have not yet paid:</string>
    <string name="electricity_etc">(Electricity, phone, gas, water, milk and newspaper etc.)</string>
    <string name="due_taxes_utility_bills">(6) Due Taxes and Utility Bills:</string>
    <string name="commission_received_amount_remaining_installments">(5) The commission which you have received, and the total amount of the remaining installments thereof which you have paid:</string>
    <string name="goods_purchased">(4) Prices of goods purchased on credit:</string>
    <string name="worker_or_entrepreneur">(Whether domestic worker or entrepreneur)</string>
    <string name="salary_of_employees">(3) Salary of employees:</string>
    <string name="shop_property_etc">(shop, house, warehouse, factory etc.)</string>
    <string name="obligatory_payment_rent">(2) Obligatory Payment Rent</string>
    <string name="obligation_repay_loan">(1) I have an obligation to repay a loan:</string>
    <string name="obligatory_discharge">1. Obligatory Discharge</string>
    <string name="financial_responsibilities">Financial Responsibilities:</string>
    <string name="purchased_with_the_intention_of_selling">(Such items and property plots etc. which have been purchased with the intention of selling at a profit and this intention is still maintained)</string>
    <string name="goods_property_purchased">(7) Goods and property purchased for the purpose of trade:</string>
    <string name="sale_zakatable_item">(6) Sale price of Zakatable item acquired in exchange for trade in goods:</string>
    <string name="shares_companies">(5) Shares of companies:</string>
    <string name="store_stock">(4) Store stock held for sale:</string>
    <string name="save">Save</string>
    <string name="today_s_goal">Today’s Goal</string>
    <string name="set_tasbih_counter">Set Tasbih Counter</string>
    <string name="al_faatiha">Al-Faatiha</string>
    <string name="the_opening">The Opening</string>
    <string name="sura_faatiha">الفاتهة</string>
    <string name="al_yaseen">Al-Yaseen</string>
    <string name="read_sura_number">15-20</string>
    <string name="last_read">Last Read</string>
    <string name="reading_plan">Reading Plan</string>
    <string name="see_reading_plan">See Reading Plan</string>
</resources>