<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom_sheet_delete_account"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_delete_account"
        style="@style/side_menu_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/account_to_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_delete_info_devices"
        style="@style/delete_all_info_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/deleting_your_account_logout_devices"
        app:layout_constraintStart_toStartOf="@+id/tv_delete_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_account" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_delete_info"
        style="@style/delete_all_info_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/deleting_your_account_info"
        app:layout_constraintStart_toStartOf="@+id/tv_delete_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_info_devices" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_cancel"
        style="@style/cancel_button_style"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/cancel_button_bg"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_account"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_account"
        style="@style/delete_button_style"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/btn_delete_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_delete_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_delete_cancel"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>