<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_alert_dialog"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_260sdp"
        android:background="@drawable/alert_dialog_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_alert_dialog_title"
        style="@style/alert_dialog_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/note"
        app:layout_constraintEnd_toEndOf="@+id/view_alert_dialog"
        app:layout_constraintStart_toStartOf="@+id/view_alert_dialog"
        app:layout_constraintTop_toTopOf="@+id/view_alert_dialog" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_alert_dialog"
        style="@style/toolbar_title_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/allow_location_text"
        app:layout_constraintEnd_toEndOf="@+id/view_alert_dialog"
        app:layout_constraintStart_toStartOf="@+id/view_alert_dialog"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert_dialog_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_location"
        style="@style/alert_dialog_button_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/allow_location"
        app:layout_constraintEnd_toEndOf="@+id/view_alert_dialog"
        app:layout_constraintStart_toStartOf="@+id/view_alert_dialog"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert_dialog" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_using_app"
        style="@style/alert_dialog_button_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/only_when_using_this_app"
        app:layout_constraintEnd_toEndOf="@+id/tv_location"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_deny_location"
        style="@style/alert_dialog_button_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/deny_location_access"
        app:layout_constraintEnd_toEndOf="@+id/tv_using_app"
        app:layout_constraintStart_toStartOf="@+id/tv_using_app"
        app:layout_constraintTop_toBottomOf="@+id/tv_using_app" />

</androidx.constraintlayout.widget.ConstraintLayout>