<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom_sheet_delete_account_successfully"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_delete_account_successfully_title"
        style="@style/side_menu_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:text="@string/account_deleted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_delete_info"
        style="@style/delete_all_info_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/thank_you_for_using_our_application"
        app:layout_constraintEnd_toEndOf="@+id/tv_delete_account_successfully_title"
        app:layout_constraintStart_toStartOf="@+id/tv_delete_account_successfully_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_account_successfully_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_quit_app"
        style="@style/continue_button_style"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_bg"
        android:text="@string/quit_app"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_delete_info"
        app:layout_constraintStart_toStartOf="@+id/tv_delete_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_info" />
</androidx.constraintlayout.widget.ConstraintLayout>